--- a/public/index.css
+++ b/public/index.css
@@ -7,13 +7,21 @@
 
 body{
     background: #12c2e9;  /* fallback for old browsers */
-background: -webkit-linear-gradient(to right, #f64f59, #c471ed, #12c2e9);  /* Chrome 10-25, Safari 5.1-6 */
-background: linear-gradient(to right, #f64f59, #c471ed, #12c2e9); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    background: -webkit-linear-gradient(to right, #f64f59, #c471ed, #12c2e9);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #f64f59, #c471ed, #12c2e9); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+}
 
+.fetch-container-nav{
+    width: 100%;
+    background: #12c2e9;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #f64f59, #c471ed, #12c2e9);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #f64f59, #c471ed, #12c2e9); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    /* position: fixed;
+    top: 0; */
 }
 
 .fetch-btn{
-   margin: 20px 0 50px;
+   margin: 20px 0 20px;
    color: #000;
    padding: 7px 15px;
    font-size: 1.5rem;
@@ -22,6 +30,7 @@ background: linear-gradient(to right, #f64f59, #c471ed, #12c2e9); /* W3C, IE 10+
    border-radius: 4px;
    background: none;
    transition: ease-out 0.4s;
+   box-shadow: #000 0px 0px 3px 0px;
 }
 .fetch-btn:hover{
     background: #000;
@@ -30,6 +39,7 @@ background: linear-gradient(to right, #f64f59, #c471ed, #12c2e9); /* W3C, IE 10+
  }
 
 .album-grid{
+    /* margin-top: 115.6px; */
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     gap: 30px;
@@ -42,8 +52,14 @@ background: linear-gradient(to right, #f64f59, #c471ed, #12c2e9); /* W3C, IE 10+
     text-align: center;
     background: rgb(252, 240, 240);
     border-radius: 8px;
-    box-shadow: #000 0px 0px 1px 0px;
+    box-shadow: #000 0px 0px 3px 0px;
     cursor: pointer;
+    transition: 0.2s;
+}
+
+.card:hover{
+    transform: scale(1.05);
+    box-shadow: #000 0px 0px 6px 1px;
 }
 
 .card-img{
@@ -58,10 +74,20 @@ background: linear-gradient(to right, #f64f59, #c471ed, #12c2e9); /* W3C, IE 10+
 }
 
 .total-cards{
+    /* position: fixed;
+    z-index: 5;
+    bottom: 0; */
+    background: #12c2e9;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #f64f59, #c471ed, #12c2e9);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #f64f59, #c471ed, #12c2e9); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    width: 100%;
+    padding: 25px 0;
+    
+}
+.total-cards p{
     font-weight: 500;
     font-size: 2rem;
     color: rgb(252, 240, 240);
-    margin: 50px 0 20px;
 }
 
 @media screen and (max-width:900px) {
@@ -80,11 +106,11 @@ background: linear-gradient(to right, #f64f59, #c471ed, #12c2e9); /* W3C, IE 10+
         padding-bottom: 0;
     }
 }
-@media screen and (max-width:400px) {
+@media screen and (max-width:450px) {
     .album-grid{
         grid-template-columns: 1fr;
         gap: 8px;
-        padding: 3px;
+        padding: 8px;
         padding-top: 0;
         padding-bottom: 0;
     }
